small additional first name field.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,9 @@
           <p 
             class="haikus"
           ><%- haikus[i].text %></p>
+          <p class="haikusFirstName">
+            <%- haikus[i].firstName %>
+          </p>
         </div>
       <% } %>
     </div>
